<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/_5sdp"
        android:id="@+id/constraint"
        android:layout_marginBottom="@dimen/_5sdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp">

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:src="@drawable/photo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:textSize="@dimen/_16ssp"
            android:textColor="#fff"
            android:layout_height="wrap_content"
            android:fontFamily="@font/font"
            app:layout_constraintBottom_toTopOf="@id/pts_value"
            android:text="@string/name"
            app:layout_constraintStart_toEndOf="@id/profile_image"
            app:layout_constraintTop_toTopOf="@id/profile_image" />

        <TextView
            android:id="@+id/pts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pts"
            android:textSize="12sp"
            android:textColor="#fff"
            android:fontFamily="@font/font"
            app:layout_constraintStart_toStartOf="@id/profile_name"
            app:layout_constraintTop_toBottomOf="@id/profile_name"
            app:layout_constraintBottom_toBottomOf="@id/profile_image"/>

        <TextView
            android:id="@+id/pts_value"
            android:layout_width="wrap_content"
            android:text="@string/pts_val"
            android:textSize="12sp"
            android:textColor="#fff"
            android:layout_marginStart="@dimen/_5sdp"
            app:layout_constraintStart_toEndOf="@id/pts"
            app:layout_constraintTop_toTopOf="@id/pts"
            app:layout_constraintBottom_toBottomOf="@id/pts"
            android:layout_height="0dp"/>


        <TextView
            android:id="@+id/margin"
            android:layout_width="wrap_content"
            android:text="@string/mar"
            android:textSize="12sp"
            android:textColor="#fff"
            android:layout_marginStart="@dimen/_5sdp"
            app:layout_constraintStart_toEndOf="@id/pts_value"
            app:layout_constraintTop_toTopOf="@id/pts_value"
            app:layout_constraintBottom_toBottomOf="@id/pts_value"
            android:layout_height="0dp"/>

        <TextView
            android:id="@+id/mar_value"
            android:layout_width="wrap_content"
            android:text="@string/mar_val"
            android:textColor="#fff"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@id/margin"
            app:layout_constraintTop_toTopOf="@id/margin"
            app:layout_constraintBottom_toBottomOf="@id/margin"
            android:layout_height="0dp"/>


        <View
            android:layout_marginTop="@dimen/_2sdp"
            android:layout_marginBottom="@dimen/_2sdp"
            android:id="@+id/view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="#000"
            app:layout_constraintTop_toBottomOf="@id/constraint"
            android:layout_width="0dp"
            android:layout_height="@dimen/_2sdp"/>




    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>