<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:background="@color/colorBgColor"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:text="@string/text"
                android:textColor="#fff"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linear_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"

                android:background="@color/colorSignIn"
                android:padding="@dimen/_2sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/font"
                    android:gravity="center"
                    android:text="@string/full_name"
                    android:textColor="#fff" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/font"
                    android:text="@string/email"
                    android:textColor="#fff" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/linear_layout_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linear_layout">


                <EditText
                    android:id="@+id/full_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_2sdp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/et_email"
                    android:fontFamily="@font/font"
                    android:hint="@string/hint_enter_here"
                    android:inputType="textPersonName"
                    android:textColor="@color/white"
                    android:textColorHint="@color/colorEmailBtn" />

                <EditText
                    android:id="@+id/email_address"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="4.5"
                    android:background="@drawable/et_email"
                    android:fontFamily="@font/font"
                    android:hint="@string/hint_enter_here"
                    android:textColor="@color/white"
                    android:textColorHint="@color/colorEmailBtn" />

                <EditText
                    android:id="@+id/mar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="4.5"
                    android:background="@drawable/et_email"
                    android:fontFamily="@font/font"
                    android:hint="@string/hint_enter_here"
                    android:inputType="textPersonName"
                    android:textColor="@color/white"
                    android:textColorHint="@color/colorEmailBtn" />

            </LinearLayout>

            <Button
                android:id="@+id/add_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:backgroundTint="#3CAA40"
                android:drawableStart="@drawable/ic_baseline_add_24"
                android:text="@string/add_row"
                android:textColor="#fff"
                app:layout_constraintEnd_toStartOf="@id/delete_row"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linear_layout_2" />

            <Button
                android:id="@+id/delete_row"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4sdp"
                android:backgroundTint="#F47988"
                android:drawableStart="@drawable/ic_baseline_delete_24"
                android:text="@string/delete_row"
                android:textColor="#fff"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/add_btn"
                app:layout_constraintTop_toBottomOf="@id/linear_layout_2" />

            <TextView
                android:id="@+id/text_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@color/colorSignIn"
                android:fontFamily="@font/font"
                android:gravity="center"
                android:text="@string/email_message"
                android:textColor="#fff"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/add_btn" />


            <TextView
                android:id="@+id/sub"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:fontFamily="@font/font"
                android:text="@string/subject"
                android:textColor="#fff"
                android:textSize="@dimen/_16ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_email" />


            <EditText
                android:id="@+id/sub_val"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_weight="1"
                android:background="@drawable/et_email"
                android:fontFamily="@font/font"
                android:hint="@string/hint_enter_here"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/colorEmailBtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/sub"
                app:layout_constraintTop_toBottomOf="@id/sub" />


            <TextView
                android:id="@+id/message"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:fontFamily="@font/font"
                android:text="@string/message"
                android:textColor="#fff"
                android:textSize="@dimen/_16ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sub_val" />


            <EditText
                android:id="@+id/message_val"
                android:layout_width="0dp"
                android:layout_height="@dimen/_150sdp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_weight="1"
                android:background="@drawable/et_email"
                android:fontFamily="@font/font"
                android:gravity="start"
                android:hint="@string/hint_enter_here"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/colorEmailBtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/sub"
                app:layout_constraintTop_toBottomOf="@id/message" />


            <Button
                android:id="@+id/send_invites"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:text="@string/send_invites"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/message_val" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>